--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <p>AI Clip Generator Application</p>
 
   <a href="privacy.html">Privacy Policy</a>
+  <br>
+  <a href="terms.html">Terms of Service</a>
 </body>
 </html>
