--- a/terms.html
+++ b/terms.html
@@ -1,1 +1,202 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Terms of Service - Clipper</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.6;
+      max-width: 900px;
+      margin: auto;
+      padding: 20px;
+      color: #222;
+    }
+    h1, h2, h3 {
+      color: #111;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    hr {
+      margin: 30px 0;
+    }
+  </style>
+</head>
+<body>
+
+<h1>Terms of Service for Clipper</h1>
+<p><strong>Last Updated:</strong> January 8, 2025</p>
+
+<hr>
+
+<h2>1. Acceptance of Terms</h2>
+<p>
+  By accessing and using Clipper ("the Application", "Service", "we", "us", or "our"),
+  you ("User", "you", or "your") accept and agree to be bound by these Terms of Service ("Terms").
+  If you do not agree, please do not use the Application.
+</p>
+
+<h2>2. Description of Service</h2>
+<p>Clipper is an AI-powered application that:</p>
+<ul>
+  <li>Downloads videos and extracts transcripts</li>
+  <li>Uses artificial intelligence to identify highlights for short-form content</li>
+  <li>Creates vertical video clips (9:16 aspect ratio)</li>
+  <li>Generates optimized titles, descriptions, and tags</li>
+  <li>Uploads processed clips to your channel</li>
+</ul>
+
+<h2>3. Eligibility</h2>
+<ul>
+  <li>At least 13 years of age (or legal age in your jurisdiction)</li>
+  <li>Have a valid Google / platform account</li>
+  <li>Legal capacity to enter this agreement</li>
+  <li>Compliance with applicable laws</li>
+</ul>
+
+<h2>4. License and Permissions</h2>
+
+<h3>4.1 License to Use</h3>
+<p>
+  We grant you a limited, non-exclusive, non-transferable, revocable license
+  to use Clipper in accordance with these Terms.
+</p>
+
+<h3>4.2 API Access</h3>
+<ul>
+  <li>Access your account via OAuth authentication</li>
+  <li>Upload content on your behalf</li>
+  <li>Access metadata required for processing</li>
+</ul>
+
+<p>You may revoke access at any time through your account settings.</p>
+
+<h3>4.3 Content Ownership</h3>
+<ul>
+  <li>You retain ownership of your content</li>
+  <li>You are responsible for content rights and legality</li>
+  <li>We claim no ownership over your content</li>
+</ul>
+
+<h2>5. User Responsibilities</h2>
+
+<h3>5.1 Lawful Use</h3>
+<ul>
+  <li>Use the service lawfully</li>
+  <li>Respect intellectual property</li>
+  <li>Follow platform policies</li>
+</ul>
+
+<h3>5.2 Prohibited Activities</h3>
+<ul>
+  <li>Copyright infringement</li>
+  <li>Policy violations</li>
+  <li>Spam or deception</li>
+  <li>Malware or abuse</li>
+  <li>Illegal activities</li>
+</ul>
+
+<h3>5.3 API Key Security</h3>
+<ul>
+  <li>Keep API keys confidential</li>
+  <li>Responsible for usage</li>
+  <li>Report unauthorized access</li>
+</ul>
+
+<h3>5.4 Account Security</h3>
+<ul>
+  <li>Maintain credential security</li>
+  <li>Responsible for activity</li>
+</ul>
+
+<h2>6. Intellectual Property Rights</h2>
+<p>
+  Clipper software and branding are protected by intellectual property laws.
+</p>
+
+<h2>7. Third-Party Services</h2>
+<ul>
+  <li>Google APIs</li>
+  <li>AI providers</li>
+  <li>Open-source libraries</li>
+</ul>
+
+<p>Use of third-party services is subject to their respective terms.</p>
+
+<h2>8. API Usage and Limitations</h2>
+<ul>
+  <li>API quotas and rate limits apply</li>
+  <li>Usage costs may apply</li>
+  <li>No abuse or circumvention allowed</li>
+</ul>
+
+<h2>9. Disclaimers</h2>
+<p>
+  The Service is provided "AS IS" without warranties of any kind.
+</p>
+
+<h2>10. Limitation of Liability</h2>
+<p>
+  We are not liable for indirect or consequential damages.
+</p>
+
+<h2>11. Indemnification</h2>
+<p>
+  You agree to indemnify and hold us harmless from claims arising from your use.
+</p>
+
+<h2>12. Copyright Policy</h2>
+<p>
+  For copyright claims, contact: <strong>andriirvansyah.2731@gmail.com</strong>
+</p>
+
+<h2>13. Termination</h2>
+<ul>
+  <li>You may stop using anytime</li>
+  <li>We may suspend for violations</li>
+</ul>
+
+<h2>14. Modifications to Terms</h2>
+<p>
+  Terms may change without notice.
+</p>
+
+<h2>15. Modifications to Service</h2>
+<p>
+  Service features may change or discontinue.
+</p>
+
+<h2>16. Governing Law</h2>
+<p>
+  Governed by the laws of Indonesia.
+</p>
+
+<h2>17. Severability</h2>
+<p>
+  Invalid provisions do not affect remaining terms.
+</p>
+
+<h2>18. Entire Agreement</h2>
+<p>
+  These Terms and Privacy Policy constitute the entire agreement.
+</p>
+
+<h2>19. Contact</h2>
+<p>
+  Email: andriirvansyah.2731@gmail.com
+</p>
+
+<h2>20. Acknowledgment</h2>
+<p>
+  By using Clipper, you agree to these Terms.
+</p>
+
+<hr>
+
+<p><strong>Copyright © 2025 Clipper. All rights reserved.</strong></p>
+
+</body>
+</html>
