--- a/privacy.html
+++ b/privacy.html
@@ -26,16 +26,16 @@
 </head>
 <body>
 
-<h1>Privacy Policy for YouTube Clipper</h1>
+<h1>Privacy Policy for Clipper</h1>
 <p><strong>Last Updated:</strong> January 8, 2025</p>
 
 <hr>
 
 <h2>1. Introduction</h2>
 <p>
-  YouTube Clipper ("we", "our", or "us") is committed to protecting your privacy.
+  Clipper ("we", "our", or "us") is committed to protecting your privacy.
   This Privacy Policy explains how we collect, use, and safeguard your information
-  when you use our application to create and upload video clips to YouTube Shorts.
+  when you use our application to create and upload video clips.
 </p>
 
 <h2>2. Information We Collect</h2>
@@ -43,21 +43,21 @@
 <h3>2.1 Information You Provide</h3>
 <ul>
   <li><strong>Google Account Information:</strong> Email address and basic profile information obtained through Google OAuth 2.0 authentication</li>
-  <li><strong>YouTube Data:</strong> Video content, titles, descriptions, and tags that you choose to upload through our application</li>
+  <li><strong>Content Data:</strong> Video content, titles, descriptions, and tags that you choose to upload through our application</li>
 </ul>
 
 <h3>2.2 Automatically Collected Information</h3>
 <ul>
   <li><strong>Video Processing Data:</strong> Temporary video files and transcripts processed locally on your device</li>
-  <li><strong>API Usage Data:</strong> Information about your interactions with YouTube API for upload purposes</li>
+  <li><strong>API Usage Data:</strong> Information about your interactions with platform APIs for upload purposes</li>
 </ul>
 
 <h2>3. How We Use Your Information</h2>
 <p>We use the collected information solely for the following purposes:</p>
 <ul>
-  <li><strong>Authentication:</strong> To verify your identity and authorize access to your YouTube account</li>
-  <li><strong>Video Upload:</strong> To upload video clips to your YouTube channel as YouTube Shorts</li>
-  <li><strong>Content Generation:</strong> To use AI (DeepSeek API) to analyze video transcripts and generate optimized titles, descriptions, and tags</li>
+  <li><strong>Authentication:</strong> To verify your identity and authorize access to your account</li>
+  <li><strong>Content Upload:</strong> To upload video clips to your connected platform</li>
+  <li><strong>Content Generation:</strong> To use AI (DeepSeek API) to analyze transcripts and generate optimized titles, descriptions, and tags</li>
   <li><strong>Service Improvement:</strong> To improve the functionality and user experience of our application</li>
 </ul>
 
@@ -73,7 +73,7 @@
 <h3>4.2 Third-Party Services</h3>
 <p>We use the following third-party services:</p>
 <ul>
-  <li><strong>Google YouTube API:</strong> For video upload functionality</li>
+  <li><strong>Google APIs:</strong> For authentication and content upload functionality</li>
   <li><strong>DeepSeek AI API:</strong> For content analysis and metadata generation</li>
   <li><strong>yt-dlp:</strong> For video downloading and processing</li>
 </ul>
@@ -91,43 +91,38 @@
   <li>Sell your personal information to third parties</li>
   <li>Share your data with advertisers</li>
   <li>Store your video content on external servers</li>
-  <li>Access your YouTube account beyond the scope you authorize</li>
+  <li>Access your account beyond the scope you authorize</li>
 </ul>
 
 <p>We MAY share information only in the following circumstances:</p>
 <ul>
   <li><strong>Legal Requirements:</strong> If required by law or valid legal process</li>
-  <li><strong>Service Providers:</strong> With DeepSeek AI (transcripts only) and Google (for uploads)</li>
+  <li><strong>Service Providers:</strong> With AI providers (transcripts only) and platform services (for uploads)</li>
 </ul>
 
 <h2>6. Your Rights and Choices</h2>
 <ul>
   <li><strong>Access:</strong> Request a copy of your data</li>
   <li><strong>Deletion:</strong> Delete data by removing <code>token.pickle</code></li>
-  <li><strong>Revocation:</strong> Revoke access via <a href="https://myaccount.google.com/permissions" target="_blank">Google Permissions</a></li>
+  <li><strong>Revocation:</strong> Revoke access via your connected account permissions</li>
   <li><strong>Opt-out:</strong> Stop using the application anytime</li>
 </ul>
 
-<h2>7. YouTube API Services</h2>
+<h2>7. Platform API Services</h2>
 <p>
-  YouTube Clipper uses YouTube API Services. By using this application, you agree to:
+  Clipper uses third-party API services. By using this application, you agree to be bound by their respective terms and privacy policies.
 </p>
-<ul>
-  <li>YouTube Terms of Service: <a href="https://www.youtube.com/t/terms" target="_blank">https://www.youtube.com/t/terms</a></li>
-  <li>Google Privacy Policy: <a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></li>
-</ul>
 
 <h2>8. Data Retention</h2>
 <ul>
   <li><strong>Authentication Tokens:</strong> Stored locally until deleted or revoked</li>
-  <li><strong>Processed Videos:</strong> Deleted after upload unless saved</li>
+  <li><strong>Processed Content:</strong> Deleted after upload unless saved</li>
   <li><strong>Transcripts:</strong> Stored locally until manually deleted</li>
 </ul>
 
 <h2>9. Children's Privacy</h2>
 <p>
-  This application is not intended for users under 13. We do not knowingly collect
-  personal information from children.
+  This application is not intended for users under 13. We do not knowingly collect personal information from children.
 </p>
 
 <h2>10. International Data Transfers</h2>
@@ -155,16 +150,14 @@
   <li>GDPR</li>
   <li>CCPA</li>
   <li>Google API Services User Data Policy</li>
-  <li>YouTube API Services Terms of Service</li>
 </ul>
 
 <hr>
 
 <h2>Your Consent</h2>
 <p>
-  By using YouTube Clipper, you consent to this Privacy Policy.
+  By using Clipper, you consent to this Privacy Policy.
 </p>
 
 </body>
 </html>
-
